# pk2_greta_uwp

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
ports/uwp/: BUILD.md  CMakeLists.txt  Package.appxmanifest  main.cpp
ports/uwp/vcpkg-overlay/ports/sdl2/: portfile.cmake  vcpkg.json  xbox-hdmi-size.patch
src/: main.cpp  pk2_entry.hpp
src/engine/: PSound.cpp  PZip.cpp
src/engine/render/: PSdl.cpp
src/settings/: settings.cpp
src/utils/: open_browser.cpp
